--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Proper noun===
-'''Czech Republic'''
+{{en-proper noun}}
 
 #Country in Central Europe. Official short-form name: [[Czechia]].
 
