{{subst:lang}}, [[User:Connel MacKenzie/Format|fmt]] <choose#1319324>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -24,7 +24,7 @@ From Old English [[ceosan|ċēosan]].
 '''to elect''' (1)
 {{top}}
 *Catalan: [[escollir]], [[elegir]], [[triar]]
-*{{nl}}: [[kiezen]], [[verkiezen]]
+*Dutch: [[kiezen]], [[verkiezen]]
 *Finnish: [[valita]]
 *French: [[choisir]]
 *German: [[wählen]]
@@ -37,7 +37,7 @@ From Old English [[ceosan|ċēosan]].
 '''to pick''' (2)
 {{top}}
 *Catalan: [[elegir]]
-*{{nl}}: [[kiezen]], [[uitkiezen]]
+*Dutch: [[kiezen]], [[uitkiezen]]
 *Finnish: [[valita]]
 *French: [[choisir]]
 *German: [[auswählen]], [[wählen]]
@@ -50,7 +50,7 @@ From Old English [[ceosan|ċēosan]].
 
 '''decide to act in a certain way''' (3)
 {{top}}
-*{{nl}}: [[kiezen]]
+*Dutch: [[kiezen]]
 *Finnish: [[päättää]] [[tehdä]]
 {{bottom}}
 
