--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -97,7 +97,7 @@
 
 [[Category:Swedish nouns]]
 [[Category:Danish nouns]]
-[[Category:English abstract nouns]]
+[[Category:English nouns]]
 [[Category:English concrete nouns]]
 [[Category:English intransitive verbs]]
 
