corrected category <שבוע#1330545>

--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -13,6 +13,6 @@ SAMPA
 
 # A [[week]]; a period of [[time]] consisting of seven [[day|days]].
 
-[[Category:Hebrew language]]
+[[Category:Hebrew nouns]]
 
 [[fr:שבוע]]
