--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -7,9 +7,10 @@
 ===Etymology===
 Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 ===Noun===
-'''but•ter'''
+'''butter'''
 
 # {{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow milk).
+#{{obsolete}},{{chemistry}} Any specific [[soft]] [[substance]]
 
 ====Translations====
 '''soft spread'''
