--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -50,6 +50,7 @@ From the Germanic ''*prūma'', originally from the Latin ''prunum'', from the Gr
 
 ;fruit
 {{top}}
+*Armenian: սալոր (salor)
 *Basque: [[aran]]
 *Bosnian: [[šljiva#Bosnian|šljiva]] {{f}}
 *Catalan: [[pruna]] {{f}}
