robot  Adding: hy <beautiful#1336787>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -105,6 +105,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 [[fr:beautiful]]
 [[gl:beautiful]]
 [[ko:beautiful]]
+[[hy:beautiful]]
 [[io:beautiful]]
 [[it:beautiful]]
 [[ku:beautiful]]
