robot  Adding: hy <butter#1337037>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -160,6 +160,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 [[el:butter]]
 [[fr:butter]]
 [[ko:butter]]
+[[hy:butter]]
 [[io:butter]]
 [[it:butter]]
 [[hu:butter]]
