removed translations for Czechia (see at Czechia!) + made links to full translations <Czech Republic#1343385>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -7,30 +7,28 @@
 ====Translations====
 {{top}}
 *Breton: [[Republik Tchek]]
-*Catalan: [[República Txeca]] ''f''
-*Chinese: [[捷克]] (Jiékè)
-*Czech: [[Česká republika]]  ''f'' ([[Česko]] ''n'')
-*Dutch: Tsjechische Republiek ([[Tsjechië]])
-*Finnish: [[Tšekin tasavalta]], ([[Tšekki]])
-*German: Tschechische Republik ([[Tschechien]])
-*Greek: [[Δημοκρατία της Τσεχίας]] ''f''
-*Hebrew: [[צ'כיה]] (Czechia)
-*Hungarian: Cseh Köztársaság ([[Csehország]])
+*Catalan: [[República Txeca]] {{f}}
+*Czech: [[Česká republika]] {{f}}
+*Dutch: [[Tsjechische Republiek]]
+*Finnish: [[Tšekin tasavalta]]
+*German: [[Tschechische Republik]]
+*Greek: [[Δημοκρατία της Τσεχίας]] {{f}}
+*Hungarian: [[Cseh Köztársaság]]
 *Interlingua: [[Republica Chec]]
-*Italian: la [[repubblica Ceca]] ''f''
-{{mid}}
+*Italian: la [[repubblica Ceca]] {{f}}
 *Japanese: [[チェコ共和国]] (チェコきょうわこく, cheko-kyowakoku)
-*Korean: [[체코]], [[체코 공화국]] (cheko, cheko gong-hwaguk)
-*Latvian: [[Čehijas Republika]] ''f'' ([[Čehija]] ''f'')
-*Luxembourgish: Tschechesch Republik (d'Tschechei)
+{{mid}}
+*Korean: [[체코 공화국]] (cheko gong-hwaguk)
+*Latvian: [[Čehijas Republika]] {{f}}
+*Luxembourgish: [[Tschechesch Republik]]
 *Norwegian: [[Den tsjekkiske republikk]]
-*Polish: Republika Czeska ''f'' ([[Czechy]] ''pl'')
+*Polish: [[Republika Czeska]] {{f}}
 *Portuguese: [[República Tcheca]]
-*Romanian: [[Republica Cehă]] ''f'' ([[Cehia]])
-*Slovak: [[Česká republika]]  ''f'' ([[Česko]] ''n'')
-*Slovene: Češka republika ([[Češka]] ''f'')
+*Romanian: [[Republica Cehă]] {{f}}
+*Slovak: [[Česká republika]] {{f}}
+*Slovene: [[Češka republika]]
 *Turkish: [[Çek Cumhuriyeti]]
-*Yiddish: Tshekhishe Republik (Tshechahs)
+*Yiddish: [[Tshekhishe Republik]]
 {{bottom}}
 
 ====See also====
