--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -14,7 +14,7 @@
 ====Translations====
 {{top}}
 *Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayá:t al-mutáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayá:t al-mutáħeda) {{f}} {{p}}
-*Armenian: [[Ամէրիկայի Միացյալ Նահանգնէր]] (Amērikayi Miats‘yal Nahangnēr)
+*Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amērikayi Miats‘yal Nahangnēr)
 *Azeri: [[Amerika Birləşmiş Ştatları]]
 *Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]}}
 *Bosnian: [[Sjedinjene Američke Države]] {{f}} {{p}}, [[Amerika]] {{f}}, [[SAD]]
