/* Translations */ + la <plum#1345771>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -42,6 +42,7 @@ Old English ''[[plume#Old English|plūme]]'', from Germanic ''*prūma'', from me
 *Icelandic: [[plóma]] {{f}}
 {{mid}}
 *Japanese: [[セイヨウスモモ]] (seiyōsumomo), [[プラム]] (puramu)
+*Latin: [[prunum|prūnum]] {{n}}
 *Latvian: [[plūme]] {{f}}
 *Middle High German: [[pflūme]], [[pfrūme]]
 *Old English: [[plume#Old English|plūme]] {{f}}
@@ -71,6 +72,7 @@ Old English ''[[plume#Old English|plūme]]'', from Germanic ''*prūma'', from me
 *Italian: [[prugno]] {{m}}
 *Japanese: [[セイヨウスモモ]] (seiyō sumomo)
 {{mid}}
+*Latin: [[prunus|prūnus]] {{f}}
 *Latvian: [[plūme]] {{f}}
 *Old English: [[plume#Old English|plūme]] {{f}}
 *Russian: [[слива]](sliva) {{f}}
