robot  Adding: simple <butter#1350020>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -166,6 +166,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 [[hu:butter]]
 [[pl:butter]]
 [[ru:butter]]
+[[simple:butter]]
 [[sr:butter]]
 [[fi:butter]]
 [[sv:butter]]
