robot  Adding: simple <beautiful#1350053>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -115,6 +115,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 [[pt:beautiful]]
 [[qu:beautiful]]
 [[ru:beautiful]]
+[[simple:beautiful]]
 [[fi:beautiful]]
 [[ta:beautiful]]
 [[vi:beautiful]]
