--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -8,7 +8,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 *:Rhymes: [[Rhymes:English:-ɛʃ|-ɛʃ]]
 
 ===Noun===
-{{en-noun-unc}}
+{{en-noun|-}}
 
 #the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
 #[[animal]] tissue, especially animal tissue used as food.
