--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -6,7 +6,7 @@
 *:Rhymes: [[Rhymes:English:-ɔː(r)təs|-ɔː(r)təs]]
 
 ===Noun===
-{{en-noun-reg}}
+{{en-noun}}
 
 # Any of various land-dwelling [[reptile]]s, of [[family]] ''[[Testudinidae]]'', whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]).  The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
 
