replace deprecated template, Replaced: {{en-noun-reg}} → {{en-noun}},  using [[WP:AWB|AWB]] <straight#1353830>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -78,7 +78,7 @@
 {{bottom}}
 
 ===Noun===
-{{en-noun-reg}}
+{{en-noun}}
 
 # A part of a racecourse or running track that is not curved.
 # In poker, five cards in sequence.
