--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -6,7 +6,7 @@
 *:Rhymes: [[Rhymes:English:-ɜː(r)tən|-ɜː(r)tən]]
 
 ===Noun===
-{{en-noun-reg}}
+{{en-noun}}
 # A piece of [[cloth]] with which one usually [[cover]]s a [[window]] to keep the [[sun]] from shining inside.
 
 ====Related terms====
