--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -24,6 +24,7 @@
 *Italian: [[europeo]] ''m'', [[europea]] ''f''
 *Polish: [[Europejczyk]] ''m'', [[Europejka]] ''f''
 *Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
+*Romanian:[[european]] {{m}} [[europeană]] {{f}}
 *Spanish: [[europeo]]
 *[[w:Swedish language|Swedish]]: [[europé]] ''c''
 {{bottom}}
