POS order, en-noun, removed 2nd noun meaning (=adjective), unwikified Swedish <European#1358421>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -2,36 +2,13 @@
 
 ===Pronunciation===
 /ˌjʊəɹəˈpiːən/
-===Noun===
-'''European'''
-
-#Person living in [[Europe]], or sometimes only [[European Union]].
-#pertaining to, or derived from, Europe.
-
-====Translations====
-
-{{top}}
-*[[Catalan]]: [[europeu]] ''m'' [[europea]] ''f''
-*Dutch: [[Europeaan]]
-*[[Esperanto]]: [[Eŭropano]]
-*[[Estonian]]: [[eurooplane]]
-*Finnish: [[eurooppalainen]]
-*French: [[Européen]] ''m'', [[Européenne]] ''f''
-*[[Frisian]]: [[Europeaan]]
-{{mid}}
-*German: [[Europäer]] ''m'', [[Europäerin]] ''f''
-*[[Interlingua]]: [[europeo]]
-*Italian: [[europeo]] ''m'', [[europea]] ''f''
-*Polish: [[Europejczyk]] ''m'', [[Europejka]] ''f''
-*Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
-*Romanian:[[european]] {{m}} [[europeană]] {{f}}
-*Spanish: [[europeo]]
-*[[w:Swedish language|Swedish]]: [[europé]] ''c''
-{{bottom}}
 
 ===Adjective===
 '''European'''
-#Related to [[Europe]] or, European Union.
+#Related to [[Europe]] or, the European Union.
+
+===Related terms===
+* [[European Central Bank]]
 
 ====Translations====
 
@@ -50,11 +27,34 @@
 *Polish: [[europejski]] ''m'', [[europejska]] ''f''
 *Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
 *Spanish: [[europeo]]
-*[[w:Swedish language|Swedish]]: [[europeisk]]
+*Swedish: [[europeisk]]
 {{bottom}}
 
-===Related terms===
-* [[European Central Bank]]
+===Noun===
+{{en-noun}}
+
+#Person living in [[Europe]], or sometimes only [[European Union]].
+
+====Translations====
+
+{{top}}
+*[[Catalan]]: [[europeu]] ''m'' [[europea]] ''f''
+*Dutch: [[Europeaan]]
+*[[Esperanto]]: [[Eŭropano]]
+*[[Estonian]]: [[eurooplane]]
+*Finnish: [[eurooppalainen]]
+*French: [[Européen]] ''m'', [[Européenne]] ''f''
+*[[Frisian]]: [[Europeaan]]
+{{mid}}
+*German: [[Europäer]] ''m'', [[Europäerin]] ''f''
+*[[Interlingua]]: [[europeo]]
+*Italian: [[europeo]] ''m'', [[europea]] ''f''
+*Polish: [[Europejczyk]] ''m'', [[Europejka]] ''f''
+*Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
+*Romanian: [[european]] {{m}}, [[europeană]] {{f}}
+*Spanish: [[europeo]]
+*Swedish: [[europé]] ''c''
+{{bottom}}
 
 [[fr:European]]
 [[io:European]]
