--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -72,6 +72,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *[[nice looking]]
 *[[pretty]]
 *[[shapely]]
+*[[chelsea lennox]]
 
 ====Antonyms====
 *[[misshapen]]
