--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -44,6 +44,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 *Portuguese: [[manteiga]] {{f}}
 *Romanian: [[unt]] {{n}}
 *Russian: [[сливочное масло]] (slívočnoje máslo) {{n}}
+*Scottish Gaelic: [[ìm]] {{m}}
 *Serbian: [[маслац]] ([[maslac]]) {{m}}
 *Slovak: [[maslo]] {{n}}
 *Slovene: [[maslo]] {{n}}, [[puter]] {{m}} (''colloq.'')
