--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -26,6 +26,7 @@ Old English ''[[feohtan]]''
 ====Translations====
 '''to be involved in physical confrontation'''
 {{top}}
+*Dutch: [[vechten]]
 *Finnish: [[tapella]], [[taistella]]
 *French: [[combattre]]
 *German: [[kämpfen]]
@@ -44,6 +45,7 @@ Old English ''[[feohtan]]''
 
 '''to counteract'''
 {{top}}
+*Dutch: [[bevechten]]
 *Finnish: [[tapella]], [[taistella]]
 *French: [[combattre]]
 *German: [[bekämpfen]]
