--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -1,5 +1,4 @@
-{{see|hét}}
-
+{{see|hét|нет}}
 ==Dutch==
 [[Category:Dutch articles]]
 [[Category:Dutch personal pronouns]]
@@ -81,11 +80,17 @@
 ;popular
 *[[ute]]
 
-===See also===
-*[[нет]]<!-- cyrillic homograph -->
-
 [[category:Swedish adjectives]]
+----
+==Tok Pisin==
+===Etymology===
+From English ''[[head]]''.
+===Noun===
+'''het'''
 
+# [[head]]
+[[Category:Tok Pisin nouns]]
+[[Category:tpi:Anatomy]]
 [[de:het]]
 [[es:het]]
 [[fr:het]]
