--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -57,6 +57,7 @@ Old English ''[[crēopan]]''
 '''move slowly with the abdomen close to the ground'''
 {{top}}
 *Catalan: [[arrossegar-se]]
+*Czech: plazit se
 *Dutch: [[kruipen]]
 *Esperanto: [[rampi]]
 *Finnish: [[ryömiä]], [[madella]]
