--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -55,7 +55,9 @@
 ** 4: Hold op!, Hold så op, med det!. 
 ** 7, 6: [[nedsætte]], [[sænke]] (''money'')
 ** 9: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]] '''[[ud]]'''.
-** 10: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]]/[[file]] (''file''), [[Slibe]] (''by stone or sandpaper'') '''[[ud]]/[[til]]'''.
+** 10: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]]/[[file]] 
+
+(''file''), [[Slibe]] (''by stone or sandpaper'') '''[[ud]]/[[til]]'''.
 ** 11: [[skære]], [[krydse]] (''Geometry'')
 ** 13: [[afbryde]].
 {{mid}}
@@ -69,6 +71,7 @@
 *Italian: [[tagliare]]
 *[[Jalnguy]]: [[jalnggan]], [[bubaman]]
 *Japanese: [[切る]] ([[きる]], kiru)
+*Portugues: cortar
 *Romanian: [[tăia]], [[croi]]
 *Serbian: [[1,2,3,9,10,11. iseći]], [[4. prestani!]], [[7,8. spustiti, sniziti]], [[12. pobeći]], [[14. rez]]
 *Spanish: [[cortar]]
