--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -127,6 +127,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[pt:find]]
 [[ru:find]]
 [[fi:find]]
+[[vi:find]]
 [[tr:find]]
 [[uk:find]]
 [[zh:find]]
