--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -148,4 +148,5 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 [[sr:flesh]]
 [[fi:flesh]]
 [[ta:flesh]]
+[[vi:flesh]]
 [[zh:flesh]]
