--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -26,6 +26,7 @@ Abbreviation of Latin ''[[exempli grati&#257;]]'' ("for example"). ''Grati&#257;
 *French: [[par ex.]], [[p. ex.]] (''[[par exemple]]'')<!-- are both right? -->
 *German: [[z. B.]] (''[[zum Beispiel]]'')
 *Greek: [[π.χ.]] (''[[παραδείγματος χάριν]]'')
+*Icelandic: [[t.d.]] ([[til dæmis]])
 *Italian: [[ad es.]] (''[[ad esempio]]'')
 {{mid}}
 *Japanese: [[例]] (rei)
