robot  Adding: fi <mandat#1391415>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -32,4 +32,5 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 [[et:mandat]]
 [[fr:mandat]]
 [[id:mandat]]
+[[fi:mandat]]
 [[vi:mandat]]
