--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -59,7 +59,7 @@ Old English ''[[crēopan]]''
 *Catalan: [[arrossegar-se]]
 *Czech: plazit se
 *Dutch: [[kruipen]]
-*Dutch: [[krybe]]
+*Danish: [[krybe]]
 *Esperanto: [[rampi]]
 *Finnish: [[ryömiä]], [[madella]]
 *German: [[kriechen]]
