/* Translations */ portuguese translation checked <substance#1393324>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -25,6 +25,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *Latvian: [[viela]] {{f}}
 *Russian: [[вещество]] (veščestvó) {{n}}
 {{mid}}
+*Portuguese: [[substância]] {{f}}
 *Swedish: [[ämne]] {{n}}, [[substans]] {{c}}
 {{bottom}}
 
@@ -32,12 +33,14 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 {{top}}
 *French: substance {{f}}
 {{mid}}
+*Portuguese: [[substância]] {{f}}
 *Swedish: [[substans]] {{c}}
 {{bottom}}
 
 ;true meaning
 {{top}}
 {{mid}}
+*Portuguese: [[substância]] {{f}}
 *Swedish: [[substans]] {{c}}
 {{bottom}}
 
@@ -83,7 +86,6 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *{{ttbc|Norwegian}}: [[substans]]
 *{{ttbc|Persian}}: {{FAchar|[[خلاصه]]}} (kholâseh)
 *{{ttbc|Polish}}: [[istota]] {{f}}
-*{{ttbc|Portuguese}}: [[substância]] {{f}}
 *{{ttbc|Romanian}}: [[substanţă]] {{f}}
 *{{ttbc|Russian}}: [[вещество]] (veščestvó) {{n}}
 *{{ttbc|Slovak}}: [[hmota]] {{f}}
