--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -21,7 +21,7 @@
 * '''Romanizations'''
 ** [[Mandarin]]
 *** '''[[Pinyin]]''': [[sǎn]] ([[san3]])
-*** '''[[Wade-Giles]]''': [[san]]<sup>3</sup>
+*** '''[[Wade-Giles]]''': [[san3|san<sup>3</sup>]]
 *** '''[[Yale]]''': 
 **[[Cantonese]]
 ***'''[[Jyutping]]''':
