--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': Pictographic representation of the sun ([[日]]) appearing over the horizon.
 
 * '''Common Meaning'''
-*#dawn
-*# morning
-*# day
-
+*# [[dawn]]
+*# [[morning]]
+*# [[day]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -37,16 +36,19 @@
 ----
 
 ==Japanese==
+
 ===[[Kanji]]===
-{{kanji|on readings=[[たん]] (tan)|kun readings=[[あした]] (ashita)}}
+{{kanji|on readings=[[たん]] (tan)
+|kun readings=[[あした]] (ashita)
+}}
 
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 단
+* '''[[Hangeul]]''': [[단]]
 
 * '''[[Eumhun]] reading''': 
 
