--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -16,7 +16,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 
 In an interlinear, literal translation of [[Genesis]] 32:28, the first mention of the word "Israel" in the Bible reads as follows: "And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather Israel that you-are-upright with Elohim and with mortals and-you-are-prevailing." Thus one literal translation of "Israel" is "Upright (with) God" (Ishr-al).
 
-====Translations====
+===Translations===
 {{top}}
 *Arabic: {{ARchar|[[إسرائيل]]}} (’isra’íl)
 *Bosnian: Izrael {{m}}
@@ -51,7 +51,7 @@ In an interlinear, literal translation of [[Genesis]] 32:28, the first mention o
 *Turkish: [[İsrail]]
 {{bottom}}
 
-====Related terms====
+===Related terms===
 *[[Israeli]]
 *[[Israelite]]
 
