--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -38,6 +38,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Greek: [[ωραίος]] (oréyos)
 *Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat)
 {{mid}}
+*Icelandic: [[fallegur]], [[fagur]]
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *Italian: [[bello]]
 *Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
