--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -15,6 +15,8 @@
 Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[Wikipedia:Hebrew Bible|Hebrew Bible]], where [[Jacob]] is renamed Israel after wrestling with a mysterious adversary. This adversary was "a man", and later "God" according to [[Wikipedia: Genesis (Old Testament)|Genesis]] 32:24–30; or "the angel of Esau", according to [[Wikipedia:Book of Hosea|Hosea]] 12:4. The biblical nation fathered by Jacob was then called "The Children of Israel" or the "Israelites". Citizens of the modern State of Israel are referred to, in English, as "Israelis".
 
 In an interlinear, literal translation of [[Genesis]] 32:28, the first mention of the word "Israel" in the Bible reads as follows: "And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather Israel that you-are-upright with Elohim and with mortals and-you-are-prevailing." Thus one literal translation of "Israel" is "Upright (with) God" (Ishr-al).
+* '''1611:''' ''Genesis'', KJV:
+*:''And he said, Thy name shall be called no more Jacob, but Israel: for as a prince hast thou power with God and with men, and hast prevailed.''
 
 ===Translations===
 {{top}}
