--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -8,7 +8,7 @@
 ===Etymology===
 Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[Wikipedia:Hebrew Bible|Hebrew Bible]], where [[Jacob]] is renamed Israel after wrestling with a mysterious adversary. This adversary was "a man", and later "God" according to [[Wikipedia: Genesis (Old Testament)|Genesis]] 32:24–30; or "the angel of Esau", according to [[Wikipedia:Book of Hosea|Hosea]] 12:4. The biblical nation fathered by Jacob was then called "The Children of Israel" or the "Israelites". Citizens of the modern State of Israel are referred to, in English, as "Israelis".
 
-* '''1611:''' ''Genesis'', KJV:
+*{{RQ:Authorized Version|Genesis|32|28}}
 *:And he said, Thy name shall be called no more Jacob, but '''Israel''': for as a prince hast thou power with God and with men, and hast prevailed.
 * '''2006:''' [http://www.scripture4all.org/OnlineInterlinear/OTpdf/gen32.pdf an interlinear, literal translation of Genesis 32:28]
 *:And-he-is-saying not Jacob he-shall-be-said further name-of-you but rather '''Israel''' that you-are-upright with Elohim and with mortals and-you-are-prevailing. (''Thus one literal translation of [[ישראל]], Israel, is "Upright [with] God"; [ישר-אל Ishr-al]'')
