--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -21,23 +21,23 @@
 '''organ that stores food'''
 {{top}}
 *Arabic: {{ARchar|[[معدة]]}} {{Unicode|(máʕida)}}
-*Breton: [[stomog]] {{m}}
+*[[Breton]]: [[stomog]] {{m}}
 *Chinese: [[胃]] (wèi)
 *Czech: [[žaludek]] {{m}}
 *Danish: [[bug#Danish|bug]] {{c}}
 *Dutch: [[maag]] {{f}}
 *Finnish: [[maha]], [[vatsa]]
 *French: [[estomac]] {{m}}
-*Frisian: [[mage]]
+*[[Frisian]]: [[mage]]
 *German: [[Magen]] {{m}}
 *Greek: [[στομάχι]] (stomáçi) {{n}}, [[στόμαχος]] (stómakhos) {{m}}, [[γαστήρ]] (ɣastír) {{m}}
 *Hebrew: [[קיבה]] {{f}}
 *Hungarian: [[gyomor]]
-*Ido: [[stomako]]
+*[[Ido]]: [[stomako]]
 {{mid}}
 *Italian: [[stomaco]] {{m}}
 *Japanese: [[胃]] ([[い]], i)
-*[[Kazakh]]: [[асқазан]] (asqazan) [[:kk:асқазан|^]]
+*[[Kazakh]]: [[асқазан]] (asqazan)
 *Korean: [[위]] (wi)
 *Old English: [[maga#Old English|maga]] {{m}}
 *Polish: [[żołądek]] {{m}}
@@ -45,9 +45,9 @@
 *Russian: [[желудок]] (želúdok) {{m}}
 *Spanish: [[estómago]] {{m}}
 *Swedish: [[mage]]
-*Tagalog: [[tiyan]]
-*Telugu: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
-*Turkish: [[mide]] [[:tr:mide|^]]
+*[[Tagalog]]: [[tiyan]]
+*[[Telugu]]: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
+*Turkish: [[mide]]
 {{bottom}}
 
 '''belly'''
