--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -110,6 +110,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 [[de:substance]]
 [[et:substance]]
 [[el:substance]]
+[[fa:substance]]
 [[fr:substance]]
 [[io:substance]]
 [[it:substance]]
