--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -4,7 +4,8 @@
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 9|9]]
 
-* '''Stroke order''': 
+* '''Stroke order''':
+[[Image:是-order.gif]]
 
 * '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 6080<sub>1</sub>
 
