--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -34,11 +34,11 @@
 ----
 
 == Japanese [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そう]] (sō), [[さつ]] (satsu)
-** '''[[Kun]]''': [[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)
-
+[[Category:Grade 1 kanji|日02]]
+{{kanji
+|[[そう]] (sō), [[さつ]] (satsu)
+|[[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)
+|rs=日02}}
 
 ----
 
@@ -71,8 +71,7 @@
 ** Hex: A6AD
 ** Decimal: 42669
 
-[[Category:Japanese kanji]]
-[[Category:Grade 1 kanji]]
+
 
 [[fr:早]]
 [[hu:早]]
