--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -7,6 +7,7 @@
 *{{AHD|/thŭn'dər/}}
 *{{IPA|/ˈθʌndə(r)/}}
 *{{SAMPA|/"TVnd@(r)/}}
+*{{audio|en-us-thunder.ogg|Audio (US)}}
 *Rhymes: [[Rhymes:English:-ʌndə(r)|-ʌndə(r)]]
 
 ===Noun===
