/* Translations */ Dutch <substance#1443806>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -21,10 +21,11 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 ====Translations====
 ;matter
 {{top}}
+*Dutch: [[substantie]] {{f}}
 *French: substance {{f}}
 *Latvian: [[viela]] {{f}}
-*Russian: [[вещество]] (veščestvó) {{n}}
 {{mid}}
+*Russian: [[вещество]] (veščestvó) {{n}}
 *Portuguese: [[substância]] {{f}}
 *Swedish: [[ämne]] {{n}}, [[substans]] {{c}}
 {{bottom}}
@@ -39,6 +40,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 
 ;true meaning
 {{top}}
+*Dutch: [[kern]], [[essentie]] {{f}}
 {{mid}}
 *Portuguese: [[substância]] {{f}}
 *Swedish: [[substans]] {{c}}
