--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -28,6 +28,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 *German: [[Fleisch]] ''n''
 *Greek: [[σάρκα]] [ˈsarka] ''f'', [[κρέας]] [ˈkre̞.as] ''n'' [rare (means also "meat")]
 {{mid}}
+*Hungarian: [[hús]]
 *Russian: мягкая [[ткань]] ''f'', [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
 *Telugu: [[మాంసం]] (maamsam)
 {{bottom}}
@@ -41,6 +42,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 *German: [[Fleisch]] ''n''
 *Greek: [[σάρκα]] [ˈsarka] ''f'', [[κρέας]] [ˈkre̞.as] ''n'' (means also "meat")
 {{mid}}
+*Hungarian: [[hús]]
 *Russian: [[мясо]] ''n'', [[плоть]] ''f''
 {{bottom}}
 
