--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -39,6 +39,7 @@
 *Finnish: [[mustekynä]]
 *French: [[stylo]] {{m}}
 *German: [[Stift]] {{m}}
+*Hungarian: [[toll]]
 *Indonesian: pen, [[pena]]
 *Irish: [[peann]] {{m}}
 *Italian: [[penna#Italian|penna]] {{f}}
