--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,9 +1,11 @@
 {{wikipedia}}
 ==English==
 ===Pronunciation===
-*{{IPA|/ˈbʌ.tɝ/}}
+*(''UK''): {{IPA|/ˈbʌt.ə/}}, {{SAMPA|/"bVt.@/}}
+*(''US''): {{AHD|bŭtʹər}}, {{IPA|/ˈbʌt.ɚ/}}, {{SAMPA|/"bVt.@`/}}
 *:{{audio|en-us-butter.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ʌtə(r)|-ʌtə(r)]]
+
 ===Etymology===
 Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 ===Noun===
