/* Derived terms */ <butter#1448030>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -70,6 +70,7 @@ Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
 *[[butter-flower]]
 <!--the original of "butterfly" is uncertain and so is under "Related terms" instead-->
 *[[butterine]]
+<!--"butteriness" is under "buttery"-->
 *[[butterish]]
 *[[butter-jags]]
 *[[butter-knife]]
