--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -13,12 +13,12 @@
 
 === Translations ===
 {{top}}
-*[[Dutch]]: [[vond]], [[vonden]]
-*[[German]]: [[fand]]
-{{mid}}
+*Dutch: [[vond]], [[vonden]]
+*German: [[fand]]
 *Ido: [[fondar]]
-*[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]]
-*[[Japanese]]: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita)
+{{mid}}
+*Indonesian: [[temu]], [[temu|menemukan]], [[temu|menemui]]
+*Japanese: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita)
 *Swedish: [[fann]], [[hittade]]
 {{bottom}}
 
