--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -19,6 +19,7 @@ From the Latin [[id est]], meaning “that is”.
 ====Translations====
 {{top}}
 *Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
+*Finnish: [[esim.]] (''esimerkiksi'')
 *French: [[c.-à-d.]]
 *German: [[d. h.]] (''[[das heißt]]'')
 *Icelandic: [[þ.e.a.s.]] ((''[[það]] [[er]] [[að]] [[segja]]''))
