--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,4 +1,4 @@
-[[Image:Kahrar-Charlotte 02.jpg|thumb|150px|right|Woman in a fur coat.]]
+[[Image:Kahrar-Charlotte 02.jpg|thumb|right|Woman in a fur coat.]]
 ==English==
 
 ===Pronunciation===
