--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -1,4 +1,4 @@
-[[Image:Acacia constricta branch.jpg|thumb|200px|right|Branches.]]
+[[Image:Acacia constricta branch.jpg|thumb|right|Branches.]]
 ==English==
 
 ===Pronunciation===
