--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -52,6 +52,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Spanish: [[hermoso]] {{m}}, [[hermosa]] {{f}}, ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
 *Slovak: [[krásny]] {{m}}, krásna {{f}}, krásne {{n}}
 *Swedish: [[vacker]]
+*[[Tamil]]: [[அழகிய]]
 *[[Telugu]]: [[అందమైన]]
 *Turkish: [[güzel]]
 *Urdu: {{URchar|[[خوبصورت]]}} (<u>kh</u>ūbsūrat)
@@ -61,6 +62,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 '''pleasant, clear weather'''
 {{top}}
 {{mid}}
+*[[Tamil]]: [[அழகிய]]
 *[[Telugu]]: [[ఆహ్లాదకరమైన]]
 {{bottom}}
 
