--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -78,6 +78,7 @@
 *Norwegian: [[tordne]]
 *Polish: [[zagrzmieć]] ''[[pf.]]'', [[grzmieć]] ''[[impf.]]''
 *Portuguese: [[troar]], [[trovejar]]
+*Slovene: [[grmeti]]
 *Swedish: [[dundra]] (1), [[dåna]] (1)
 *[[Tupinambá]]: [[sunung]]
 *Thai: สายฟ้า[[ฟาด]](Sai-Fa-Fad) , [[ฟ้าผ่า]](Fa-Pa)
