--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -32,6 +32,7 @@ From Old English [[ceosan|ċēosan]].
 {{mid}}
 *Italian: [[eleggere]]
 *Portuguese: [[escolher]]
+*Slovene: [[izvoliti]]
 *Spanish: [[elegir]]
 *Swedish: [[välja]]
 *Tagalog: [[pili]]
@@ -49,6 +50,7 @@ From Old English [[ceosan|ċēosan]].
 *Italian: [[scegliere]], [[selezionare]]
 *Maori: [[whiri]]
 *Portuguese: [[escolher]]
+*Slovene: [[izbrati]]
 *Spanish: [[escoger]]
 *Swedish: [[välja]]
 *Tagalog: [[pili]]
@@ -74,7 +76,6 @@ From Old English [[ceosan|ċēosan]].
 *{{ttbc|Indonesian}}: [[pilih]]
 *{{ttbc|Japanese}}: [[選ぶ]] ([[えらぶ]], erabu)
 *{{ttbc|Norwegian}}: [[velge]], [[utvelge]], [[beslutte]]
-*{{ttbc|Slovene}}: [[izbrati]]
 *{{ttbc|Tongan}}: [[fili]]
 
 ===References===
