/* Translations */ gender req <port#1479698>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -26,7 +26,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 '''place at which ships dock'''
 {{top}}
 *Chinese: [[港口]] gǎngkǒu
-*Dutch: [[haven#Dutch|haven]] ''f''
+*Dutch: [[haven#Dutch|haven]] {{f}}
 *Estonian: [[sadam]]
 *Finnish: [[satama]]
 *French: port {{m}}
@@ -34,15 +34,15 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *Greek: [[λιμένας]] {{m}}, [[λιμάνι]] {{n}}
 *Hungarian: [[kikötő]]
 *[[Ido]]: [[portuo]]
+{{mid}}
 *Italian: [[porto]] {{m}}
 *Japanese: [[港]]　([[みなと]], ''minato'')
 *Korean: [[항구]] ([[港口]] hanggu)
-{{mid}}
 *Polish: port {{m}}
-*Portuguese: porto {{m}}
+*Portuguese: [[porto]] {{m}}
 *Spanish: [[puerto]] {{m}}
 *Swedish: [[hamn]] {{c}}
-*Telugu: [[ఓడరేవు]] (ODaraevu)
+*[[Telugu]]: [[ఓడరేవు]] (ODaraevu)
 {{bottom}}
 
 '''town or city containing such a place'''
@@ -50,12 +50,12 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 *Dutch: [[havenstad]] {{f}}
 *Finnish: [[satama]], [[satamakaupunki]]
 *French: port {{m}}
-*German: [[Hafenstadt]] ''f''
-*Greek: [[πόρτο]]<!-- seen with ''f'' and ''n'' articles -->
-*[[Hungarian]]: [[kikötőváros]]
-*[[Ido]]: [[portuo]]
-*Italian: [[città portuale]] ''f''
+*German: [[Hafenstadt]] {{f}}
+*Greek: [[πόρτο]]<!-- seen with ''f'' and ''n'' articles --> {{g|Greek}}
+*Hungarian: [[kikötőváros]]
 {{mid}}
+*[[Ido]]: [[portuo]]
+*Italian: [[città portuale]] {{f}}
 *Polish: [[miasto portowe]] {{n}}
 *Spanish: [[puerto]] {{m}}
 *Swedish: [[hamnstad]] {{c}}
@@ -63,12 +63,12 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 
 '''left-hand side of a vessel'''
 {{top}}
-*Dutch: [[bakboord]]
+*Dutch: [[bakboord]] [[Category:Dutch nouns with incomplete gender]]
 *Finnish: [[paapuuri]]
 *French: [[bâbord]] {{m}}
-*German: [[Backbord]] ''n''
+*German: [[Backbord]] {{n}}
+*Greek: [[αριστερή πλευρά]] {{f}}
 {{mid}}
-*Greek: [[αριστερή πλευρά]] ''f''
 *Italian: [[babordo]] {{m}}
 *Portuguese: [[bombordo]] {{m}}
 *Spanish: [[babor]] {{m}}
