--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -33,6 +33,43 @@
 * '''Other info''': 
 
 ----
+Chinese Version
+《史记殷本纪》指出：“武丁夜梦得圣人，名曰说，以梦所
+见，视群臣百吏，皆非也。于是乃使百工营求之野，得说于
+傅险中，是时说为胥靡，筑于傅险，见于武丁，武丁曰：‘
+是也。’得而与之语，果圣人，举以为相，殷国大治。故遂
+以傅险姓之，号曰傅说。”由此可见，这位上古贤相是被帝
+王赐姓名为“傅说”，至于他以前的姓名为何，可能由于他
+为相之后的声名太响亮了，所以没有人去注意，结果，史书
+上缺乏记载，而后世也就不得而知了。
+
+　　傅说之为傅姓的始祖，是被历来的学者所共同承认的，
+从未有人表示过置疑，傅姓人家最早的发源地就是在山西省
+平陆县之东，今名为“隐贤社”。
+
+　　另外，根据《姓纂》的记载，傅姓后来主要是繁衍于北
+地和清河二处；北地，指的是今宁夏省及甘肃省的东北部地
+区；清河，指的则是今河北省的清河、枣强以及山东省的济
+平、高唐、临清、武城等县及其附近一带之地，可见得傅姓
+在北方的繁衍，是既速且广的。
+
+　　汉晋之时名人辈出具有光耀史册的始祖的傅氏，在历史
+上，一直是表现优异，丝毫都没有辱没自己与生俱来的光彩
+门楣，尤其汉晋之时。傅氏更是名人能士辈出，大放异彩。
+傅姓在汉晋，数百年间的大放异彩，是由2200年前的北
+地人傅宽开始的，傅宽是汉高祖的开国功臣，汉高祖得天下
+后曾定元功18人，傅宽被排在第9位，封为阳陵侯，显赫
+异常。
+=======================
+
+English Version
+There is one archived story in “History Speaks – Yin Dynasty History”. Wu Ding has a dream that he will get a wisdom man for his kingdom. After waking up another day, he gathers all his officers and trying to find the wisdom man in the dream. But no one looks like the wisdom man. So he asks his servants to look for the wisdom man. Finally, they found him in a place named as Fu Xian. His name is Shuo, and he is a prisoner and working on defense building. Wu Ding meet Shuo and finds that he is exactly the wisdom man in his dream. Wu Ding is very happy and starts discussion with Shuo and amazed by his talents. Wu Ding believes he is the right person he was looking for and raise him to be the prime minister. Since he met Shuo at Fu Xian, then gives his name as “Fu Shuo”
+
+Fu Shuo is a great prime menister and Fu becomes a great last name since then. All the historians believed that Fu is originated from Fu Shuo and originated from today’s east of Ping Lu County, Shan Xi Province, a place called “Yin Xian She” (Means a place hide the wisdom man).
+
+Another hand, according to “Xing Zhuan”, Fu families grow at Ning Xia Province and Gan Su Province; and also in He Bei Province and Shan Dong Province. So historians believe that Fu families spread over very fast and wide in the north part of China.
+
+At Han dynasty, Fu is a great last name in history. Fu Kuan is the No. 9 generals of 18 to setup the Han dynasty kingdom.
 
 ==Japanese==
 ===[[Kanji]]===
