--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -50,3 +50,5 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 [[Category:English pluralia tantum]]
 
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
+
+[[vi:pajamas]]
