--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -12,7 +12,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': hillside, inconvenient places
+* '''Common Meaning''': slope, hillside, inconvenient places
 
 ----
 
@@ -37,7 +37,9 @@
 
 ==Japanese==
 ===[[Kanji]]===
-{{kanji|on readings=[[はん]] (han)|kun readings=[[さか]] (saka)}}
+{{kanji|on readings=[[はん]] (han)
+|kun readings=[[さか]] (saka)
+}}
 
 * '''Other info''':  
 
