--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -12,8 +12,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': slope, hillside --
-
+* '''Common Meaning''': [[slope]], [[hillside]]
 == [[Chinese]] [[Hanzi]] ==
 
 * '''Romanizations'''
