--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -8,7 +8,7 @@
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 日十 (AJ)
 
-* '''Graphical Significance and Origin''': 
+* '''Graphical Significance and Origin''': Pictograph of sun over the horizon 
 
 * '''Common Meaning'''
 *#early
