+fi, dewikified common languages <came#1583874>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -15,11 +15,12 @@
 # past tense of to [[come]]
 
 ==== Translations ====
-*[[Dutch]]: [[kwam]]
-*[[Esperanto]]: [[venis]]
-*[[German]]: [[kam]]
-*[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
-*[[Japanese]]: [[来た]] ([[きた]], kita)
+*Dutch: [[kwam]]
+*Esperanto: [[venis]]
+*Finnish: [[tuli]]
+*German: [[kam]]
+*Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
+*Japanese: [[来た]] ([[きた]], kita)
 
 ===Anagrams===
 *[[mace]]
