--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -39,6 +39,7 @@
 
 [[de:Czech Republic]]
 [[el:Czech Republic]]
+[[fr:Czech Republic]]
 [[io:Czech Republic]]
 [[hu:Czech Republic]]
 [[nds:Czech Republic]]
