robot  Adding: [[vi:Israel]] <Israel#1601449>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -96,4 +96,5 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 [[sr:Israel]]
 [[fi:Israel]]
 [[sv:Israel]]
+[[vi:Israel]]
 [[zh:Israel]]
