--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -21,7 +21,7 @@ From the Latin [[id est]], meaning “that is”.
 *Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
 *Finnish: [[esim.]] (''esimerkiksi'')
 *French: [[c.-à-d.]]
-*German: [[d._h.]] (''[[das heißt]]'')
+*German: [[d. h.]] (''[[das heißt]]'')
 *Icelandic: [[þ.e.a.s.]] ((''[[það]] [[er]] [[að]] [[segja]]''))
 {{mid}}
 *Italian: [[cioè]]
