--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -19,6 +19,7 @@
 #A desirable thing.
 #A [[raisin]], when used in a pudding or cake.
 #(''slang; usually in plural'') A [[testicle]].
+#The edible, fleshy stone of ''Prunus mume'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice.  Also known as ''[[ume]]''.
 
 ===Derived terms===
 {{top4}}
