--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -113,6 +113,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 [[hy:beautiful]]
 [[io:beautiful]]
 [[it:beautiful]]
+[[kk:beautiful]]
 [[ku:beautiful]]
 [[hu:beautiful]]
 [[ja:beautiful]]
@@ -124,4 +125,5 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 [[fi:beautiful]]
 [[ta:beautiful]]
 [[vi:beautiful]]
+[[uk:beautiful]]
 [[zh:beautiful]]
