--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -48,6 +48,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 *Mongolian: [[олох]]
 *Romanian: [[găsi]]
 *Russian: [[найти]]
+*Polish: [[znajdować]]
 *Portuguese: [[achar]], [[encontrar]]
 *Slovene: [[najti]]
 *Spanish: [[encontrar]], [[hallar]]
