--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -59,6 +59,7 @@ Old English ''[[sprēcan]]'' (later: ''spēcan'')
 *Japanese: [[話す]] ([[はなす]], hanasu)
 *Korean: [[말하다]] (malhada)
 *Latin: [[dicere]]
+*Polish: [[mówić]]
 *Portuguese: [[falar]]
 *Romanian: [[vorbi]],  [[discuta]]
 *Romansch: [[pledar]],  [[tschantschar]]
