--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -13,7 +13,7 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning''': [[evil]], [[wicked]], [[bad]], [[foul]]
-
+[[mean]]
 ----
 
 == Chinese [[Hanzi]] ==
