robot  Adding: [[es:straight]], [[vi:straight]] <straight#1656597>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -96,6 +96,7 @@
 [[Category:English homophones]]
 [[Category:1000 English basic words]]
 
+[[es:straight]]
 [[fr:straight]]
 [[io:straight]]
 [[it:straight]]
@@ -103,4 +104,5 @@
 [[simple:straight]]
 [[fi:straight]]
 [[ta:straight]]
+[[vi:straight]]
 [[zh:straight]]
