--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -16,6 +16,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 # A theatrical performance featuring [[actor]]s.
 # An individual's performance in a sport.
 # A major move by a business.
+# The amount of [[slackness]] in a drive chain or similar looped item.
+#:No wonder the fanbelt is slipping, there is too much '''play''' in it.
 
 ====Translations====
 '''playful activity'''
