--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -34,7 +34,7 @@
 {{mid}}
 *'''Japanese''': [[煉瓦]] ([[レンガ]], renga)
 *'''Latvian''': [[ķieģelis]] {{m}} (1,2)
-*'''Portuguese''': [[tijolo]]
+*'''Portuguese''': [http://pt.wiktionary.org/wiki/tijolo tijolo]
 *'''Romanian''':[[cărămidă]] ''f''
 *'''Russian''': [[кирпич]] (kirpich)
 *'''Slovene''': [[opeka]] ''f'' (1,2)
