Reverted edits by [[Special:Contributions/42croad|42croad]] ([[User_talk:42croad|Talk]]); changed back to last version by [[User:RobotGMwikt|RobotGMwikt]] <brick#1658981>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -34,7 +34,7 @@
 {{mid}}
 *'''Japanese''': [[煉瓦]] ([[レンガ]], renga)
 *'''Latvian''': [[ķieģelis]] {{m}} (1,2)
-*'''Portuguese''': [http://pt.wiktionary.org/wiki/tijolo tijolo]
+*'''Portuguese''': [[tijolo]]
 *'''Romanian''':[[cărămidă]] ''f''
 *'''Russian''': [[кирпич]] (kirpich)
 *'''Slovene''': [[opeka]] ''f'' (1,2)
