--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -33,13 +33,12 @@
 
 ----
 
-== Japanese [[Kanji]] ==
+== Japanese ==
+=== [[Kanji]] ===
+{{kanji
+|[[たい]] (tai)
+|[[さま]] (sama), [[わざと]] (wazato)|rs=心10|grade=5}}
 
-* '''Readings'''
-** '''[[On]]''': [[たい]] (tai)
-** '''[[Kun]]''': [[さま]] (sama), [[わざと]] (wazato)
-
-[[Category:Japanese kanji]]
 ----
 
 == Korean [[Hanja]] ==
