robot  Adding: [[hy:curtain]], [[ru:curtain]] <curtain#1687648>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -40,9 +40,11 @@
 
 [[fa:curtain]]
 [[fr:curtain]]
+[[hy:curtain]]
 [[io:curtain]]
 [[it:curtain]]
 [[hu:curtain]]
+[[ru:curtain]]
 [[sr:curtain]]
 [[fi:curtain]]
 [[ta:curtain]]
