/* Translations */ <New Zealand#1688238>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -54,10 +54,8 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Spanish: [[Nueva Zelanda]] {{f}}
 *Swedish: [[Nya Zeeland]]
 *Turkish: [[Yeni Zelanda]]
+*Ukrainian: [[Нова Зеландія]] (Nóva Zelándija) {{f}}
 {{bottom}}
-Translations to be checked
-{{top}}
-{{ttbc|Ukrainian}}: [[Нова Зеландія]]
 
 ====Synonyms====
 * [[Maoriland]]
