--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -173,6 +173,7 @@ Old English ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]'
 [[it:fight]]
 [[kk:fight]]
 [[hu:fight]]
+[[ru:fight]]
 [[fi:fight]]
 [[ta:fight]]
 [[vi:fight]]
