--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -143,6 +143,7 @@ From Proto-North Sarawak *''likud'', from Proto-Malayo-Polynesian *''likuj''.
 [[hu:cut]]
 [[ja:cut]]
 [[pt:cut]]
+[[ru:cut]]
 [[simple:cut]]
 [[fi:cut]]
 [[ta:cut]]
