--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -2,9 +2,9 @@
 {{wikipedia}}
 ===Pronunciation===
 *British {{IPA|[ˈdʒɜːmənɪ]}}
-*British {{SAMPA|/dZ3:m@nI/}}
-*US {{IPA|[ˈdʒɜːrmənɪ]}}
-*US {{SAMPA|/dZ3`:mIni/}}
+*British {{SAMPA|/"dZ3:m@nI/}}
+*US {{IPA|[ˈdʒɝməni]}}
+*US {{SAMPA|/"dZ3`m@ni/}}
 
 ===Proper noun===
 [[Category:English proper nouns]]
