robot  Adding: [[hy:France]] <France#1713596>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -134,22 +134,23 @@
 [[Category:France|*]]
 [[Category:fr:Countries]]
 
-[[bg:France]]
 [[zh-min-nan:France]]
+[[bg:France]]
 [[de:France]]
 [[et:France]]
 [[el:France]]
 [[fr:France]]
 [[gl:France]]
 [[ko:France]]
+[[hy:France]]
 [[hi:France]]
 [[io:France]]
 [[it:France]]
 [[la:France]]
 [[hu:France]]
 [[nl:France]]
-[[nds:France]]
 [[ja:France]]
+[[nds:France]]
 [[pl:France]]
 [[pt:France]]
 [[ro:France]]
