--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -95,6 +95,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 [[ko:New Zealand]]
 [[io:New Zealand]]
 [[hu:New Zealand]]
+[[pl:New Zealand]]
 [[ro:New Zealand]]
 [[ru:New Zealand]]
 [[fi:New Zealand]]
