--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -10,7 +10,7 @@
 ===Noun===
 {{en-noun}}
 
-# A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
+# A utensil, usually [[tubular]] in form, containing ink used to [[jizz]] or make marks.
 #: ''He took notes with a '''pen'''.''
 # A mark made with [[ink]].
 #: ''I need some stain remover, this mark is in '''pen'''.''
