--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -10,7 +10,7 @@
 *Rhymes: [[Rhymes:English:-ʌm|-ʌm]]
 
 ===Etymology===
-Old English [[cuman]].
+Old English [[cuman]]. Cognate include Latin ''[[commeo]]'' (to go and to come, to pass)
 
 ===Verb===
 {{en-verb2|'''to come'''|'''[[comes]]'''|'''[[came]]'''|'''come'''|'''[[coming]]'''}}
