--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -11,7 +11,7 @@
 ## (''publishing'') In sewn books, the tendancy of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
 ## (''materials science'') An increase in [[strain]] with time.
 ##{{geology}} the [[imperceptible]] [[downslope]] movement of surface [[rock]]
-# (''informal'') A annoyingly [[unpleasant]] person.
+# (''informal'') An annoyingly [[unpleasant]] person.
 #: ''Stop following me, you creep!''
 
 ====Translations====
