audio, add defs <plum#1726256>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -6,6 +6,7 @@
 ===Pronunciation===
 {{wikipedia}}
 *{{AHD|plŭm}}, {{IPA|/plʌm/}}, {{SAMPA|/plVm/}}
+*{{audio|en-us-plum.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ʌm|-ʌm]]
 *:'''Homophones''': [[plumb]]
 
@@ -260,6 +261,8 @@
 '''plum'''
 
 #Of a dark bluish-red colour.
+#[[choice|Choice]]; especially [[lavish]] or [[preferred]].
+#:''She landed a '''plum''' position as an executive for the firm.''
 
 ====Translations====
 '''colour'''
@@ -270,6 +273,11 @@
 *Japanese: [[暗紫色]]の (あんししょくの, anshishoku no)
 *Romanian: [[prună]] {{f}}
 {{bottom}}
+
+===Adverb===
+{{en-adv|-}}
+# [[completely|Completely]]; [[utterly]].
+#:''You're going to think I'm '''plum''' crazy for this, but I want to adopt all seven kittens.''
 
 ===See also===
 {{top3}}
