--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -51,7 +51,7 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 *Slovene: [[Izrael]] {{m}}
 *Spanish: Israel
 *Swedish: Israel
-*Tatar: [[Israel#Tatar|Israel]]
+*Tatar: [[İsrael#Tatar|İsrael]]
 *Turkish: [[İsrail]]
 {{bottom}}
 
@@ -82,17 +82,6 @@ Originally from Hebrew ('''ישראל'''), the name "Israel" is rooted in the [[
 [[Category:sv:Countries]]
 '''Israel'''
 #Israel
-
-----
-==Tatar==
-===Proper noun===
-'''İsrael'''
-#[[Israel#English|Israel]]
-===References===
-*[http://www2.azatliq.org/analysis/analysis/tb/2003/10/720DB54F-F8AA-4260-9810-FF00EB15537A.asp İsrael premier-ministrı...8 Üktäber 2003]
-
-[[Category:tt:Countries]]
-[[Category:Tatar proper nouns]]
 
 [[bg:Israel]]
 [[de:Israel]]
