--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -129,6 +129,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[ko:find]]
 [[io:find]]
 [[it:find]]
+[[kk:find]]
 [[ku:find]]
 [[hu:find]]
 [[pt:find]]
