robot  Adding: [[ja:speak]] <speak#1730768>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -93,6 +93,7 @@ Old English ''[[sprēcan]]'' (later: ''spēcan'')
 [[io:speak]]
 [[it:speak]]
 [[hu:speak]]
+[[ja:speak]]
 [[pl:speak]]
 [[ru:speak]]
 [[simple:speak]]
