--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -16,6 +16,7 @@ Old English ''[[sūcan]]''
 
 ====Synonyms====
 *(2, 3 above) To [[blow]]
+* Jeff Mudrock
 
 ====Antonyms====
 *(1 above) To [[blow]]
