--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -40,6 +40,7 @@ Old English ''[[pullian]]''
 {{mid}}
 *Polish: [[ciągnąć]], [[pociągnąć]]
 *Swahili: [[kuvuta]]
+*Swedish: [[dra]]
 *Telugu: [[లాగు]] (laagu)
 *Turkish: [[çekmek]]
 {{bottom}}
