--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -66,6 +66,7 @@ Old English ''[[pullian]]''
 *German: [[ziehen]] [[:de:ziehen|(de)]]
 *Italian: [[tirare]]
 {{mid}}
+*Swedish: [[dra]]
 {{bottom}}
 *Spanish: [[halar]], [[jalar]]
 
