Han character format  using [[WP:AWB|AWB]] <倦#1738781>

--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2921<sub>2</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人火手山 (OFQU)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': be tired of, weary
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2921<sub>2</sub>|canj=人火手山 (OFQU)}}
+# be tired of, weary
+====References====
+{{Han ref|kx=0108.170|dkj=00788|dj=0231.070|hdz=10183.070|uh=5026|ud=20518|bh=ADC2|bd=44482}}
 ----
 
-== Chinese [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,13 +20,13 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gyun6
 
-
 ----
-
 == Japanese ==
 ===Kanji===
-{{kanji|[[けん]] ([[ken]])|[[つかれる]] ([[tsukareru]]), [[うむ]] ([[倦む]], [[umu]])}}
-===Compounds===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[けん]] ([[ken]])|kun=[[つかれる]] ([[tsukareru]]), [[うむ]] ([[倦む]], [[umu]])}}
+====Compounds====
 *[[倦厭]]
 *[[倦怠]]
 *[[倦憊]]
@@ -42,10 +36,9 @@
 *[[倦きる]], [[倦る]]
 *[[倦ねる]]
 
-
 ----
-
-== Korean [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 권
 
@@ -53,24 +46,8 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gwon
 ** '''[[McCune-Reischauer]]''': kwŏn
 
-----
 
-== Dictionary Information ==
 
-* KangXi: 0108.170
-* Morohashi: 00788
-* Dae Jaweon: 0231.070
-* Hanyu Da Zidian: 10183.070
 
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5026
-** Decimal: 20518
-* '''Big5''':
-** Hex: ADC2
-** Decimal: 44482
-
-[[Category:Japanese kanji|人08倦]]
 
 [[fr:倦]]
