Han character format  using [[WP:AWB|AWB]] <倪#1738785>

--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2721<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹X山 (OHXU)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': feeble, tiny, young and weak
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2721<sub>7</sub>|canj=人竹X山 (OHXU)}}
+# feeble, tiny, young and weak
+====References====
+{{Han ref|kx=0109.020|dkj=00792|dj=0231.110|hdz=10179.090|uh=502A|ud=20522|bh=ADD9|bd=44505}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,19 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ngai4
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[げい]] (gei), [[がい]] (gai)
-|kun readings=[[きわ]] (kiwa)
-}}
+===Kanji===
 
-* '''Other info''':  
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[げい]] (gei), [[がい]] (gai)|kun=[[きわ]] (kiwa)}}
+
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 예
 
@@ -48,26 +40,11 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ye
 ** '''[[McCune-Reischauer]]''': ye
 
-----
 
-== Dictionary Information ==
 
-* KangXi: 0109.020
-* Morohashi: 00792
-* Dae Jaweon: 0231.110
-* Hanyu Da Zidian: 10179.090
 
-== Technical Information ==
 
-* '''Unicode''':
-** Hex: 502A
-** Decimal: 20522
-* '''Big5''':
-** Hex: ADD9
-** Decimal: 44505
 
-[[Category:Chinese hanzi]]
-[[Category:Japanese kanji]]
 [[Category:Korean hanja]]
 
 [[zh-min-nan:倪]]
