--- a/en/倮/倮.11054.wikitext
+++ b/en/倮/倮.11054.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人田木 (OWD)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': bare, naked, uncovered
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=|canj=人田木 (OWD)}}
+# bare, naked, uncovered
+====References====
+{{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E|ud=20526}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ら]] (ra), [[か]] (ka), [[げ]] (ge)
-|kun readings=[[はだか]] (hadaka), [[せまい]] (semai), [[かたぬぐ]] (katanugu), [[すはだ]] (suhada)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[ら]] (ra), [[か]] (ka), [[げ]] (ge)|kun=[[はだか]] (hadaka), [[せまい]] (semai), [[かたぬぐ]] (katanugu), [[すはだ]] (suhada)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 라
 
@@ -48,19 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ra
 ** '''[[McCune-Reischauer]]''': ra
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.070
-* Morohashi: 00797
-* Dae Jaweon: 0232.050
-* Hanyu Da Zidian: 10177.030
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 502E
-** Decimal: 20526
 
 [[fr:倮]]
