--- a/en/倯/倯.11056.wikitext
+++ b/en/倯/倯.11056.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2823<sub>2</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人木金戈 (ODCI)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2823<sub>2</sub>|canj=人木金戈 (ODCI)}}
+====References====
+{{Han ref|kx=0109.080|dkj=00798|dj=0232.060|hdz=10172.030|uh=502F|ud=20527|bh=D0DB|bd=53467}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[しょう]] (shō), [[しゅ]] (shu)
-|kun readings=[[おこたる]] (okotaru), [[ののしる]] (nonoshiru)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[しょう]] (shō), [[しゅ]] (shu)|kun=[[おこたる]] (okotaru), [[ののしる]] (nonoshiru)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0109.080
-* Morohashi: 00798
-* Dae Jaweon: 0232.060
-* Hanyu Da Zidian: 10172.030
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 502F
-** Decimal: 20527
-* '''Big5''':
-** Hex: D0DB
-** Decimal: 53467
 
 [[fr:倯]]
