--- a/en/倱/倱.11061.wikitext
+++ b/en/倱/倱.11061.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2621<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人日心心 (OAPP)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2621<sub>1</sub>|canj=人日心心 (OAPP)}}
+====References====
+{{Han ref|kx=0109.100|dkj=00800|dj=0232.080|hdz=10177.040|uh=5031|ud=20529|bh=D0DC|bd=53468}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': wan6
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[こん]] (kon), [[ごん]] (gon)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[こん]] (kon), [[ごん]] (gon)|kun=}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 혼
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': hon
 ** '''[[McCune-Reischauer]]''': hon
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.100
-* Morohashi: 00800
-* Dae Jaweon: 0232.080
-* Hanyu Da Zidian: 10177.040
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5031
-** Decimal: 20529
-* '''Big5''':
-** Hex: D0DC
-** Decimal: 53468
 
 [[fr:倱]]
