--- a/en/倲/倲.11064.wikitext
+++ b/en/倲/倲.11064.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人木田 (ODW)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=|canj=人木田 (ODW)}}
+====References====
+{{Han ref|kx=0109.110|dkj=00801|dj=0232.090|hdz=10172.040|uh=5032|ud=20530}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[とう]] (tō), [[つ]] (tsu)
-|kun readings=[[おろかなさま]] (orokanasama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[とう]] (tō), [[つ]] (tsu)|kun=[[おろかなさま]] (orokanasama)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 동
 
@@ -48,19 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': dong
 ** '''[[McCune-Reischauer]]''': tong
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.110
-* Morohashi: 00801
-* Dae Jaweon: 0232.090
-* Hanyu Da Zidian: 10172.040
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5032
-** Decimal: 20530
 
 [[fr:倲]]
