Han character format  using [[WP:AWB|AWB]] <倳#1738804>

--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2520<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人十中弓 (OJLN)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2520<sub>7</sub>|canj=人十中弓 (OJLN)}}
+====References====
+{{Han ref|kx=0109.120|dkj=00802|dj=0232.100|hdz=10172.050|uh=5033|ud=20531|bh=D0D1|bd=53457}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[し]] (shi)
-|kun readings=[[さす]] (sasu), [[さしこむ]] (sashikomu)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[し]] (shi)|kun=[[さす]] (sasu), [[さしこむ]] (sashikomu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 사
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': sa
 ** '''[[McCune-Reischauer]]''': sa
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.120
-* Morohashi: 00802
-* Dae Jaweon: 0232.100
-* Hanyu Da Zidian: 10172.050
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5033
-** Decimal: 20531
-* '''Big5''':
-** Hex: D0D1
-** Decimal: 53457
 
 [[fr:倳]]
