--- a/en/倴/倴.11069.wikitext
+++ b/en/倴/倴.11069.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人大十廿 (OKJT)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=|canj=人大十廿 (OKJT)}}
+====References====
+{{Han ref|kx=0109.160|dkj=00806|dj=0232.140|hdz=10172.100|uh=5034|ud=20532}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ほん]] (hon)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[ほん]] (hon)|kun=}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 분
 
@@ -48,19 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': bun
 ** '''[[McCune-Reischauer]]''': pun
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.160
-* Morohashi: 00806
-* Dae Jaweon: 0232.140
-* Hanyu Da Zidian: 10172.100
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5034
-** Decimal: 20532
 
 [[fr:倴]]
