--- a/en/倵/倵.11071.wikitext
+++ b/en/倵/倵.11071.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2324<sub>0</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人一心一 (OMPM)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2324<sub>0</sub>|canj=人一心一 (OMPM)}}
+====References====
+{{Han ref|kx=0109.170|dkj=00807|hdz=10169.170|uh=5035|ud=20533|bh=D0DA|bd=53466}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,33 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ぶ]] (bu), [[む]] (mu)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[ぶ]] (bu), [[む]] (mu)|kun=}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0109.170
-* Morohashi: 00807
-* Hanyu Da Zidian: 10169.170
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5035
-** Decimal: 20533
-* '''Big5''':
-** Hex: D0DA
-** Decimal: 53466
 
 [[fr:倵]]
