--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2429<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人大一火 (OKMF)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2429<sub>1</sub>|canj=人大一火 (OKMF)}}
+====References====
+{{Han ref|kx=0109.171|dkj=00818|dj=0232.200|hdz=10172.090|uh=5037|ud=20535|bh=D0D2|bd=53458}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': noi6
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[だい]] (dai), [[ない]] (nai)
-|kun readings=[[なんじ]] (nanji)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[だい]] (dai), [[ない]] (nai)|kun=[[なんじ]] (nanji)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0109.171
-* Morohashi: 00818
-* Dae Jaweon: 0232.200
-* Hanyu Da Zidian: 10172.090
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5037
-** Decimal: 20535
-* '''Big5''':
-** Hex: D0D2
-** Decimal: 53458
 
 [[fr:倷]]
