Han character format  using [[WP:AWB|AWB]] <倹#1738813>

--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[儉]]
+{{see|儉}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人人一人 (OOMO), X人人一人 (XOOMO)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': temperate, frugal, economical
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=|canj=人人一人 (OOMO), X人人一人 (XOOMO)}}
+# temperate, frugal, economical
+====References====
+{{Han ref|kx=0109.171|dkj=00823|dj=0233.040|hdz=10181.011|uh=5039|ud=20537}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -28,21 +22,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[けん]] (ken)
-|kun readings=[[つずまやか]] (tsuzumayaka)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[けん]] (ken)|kun=[[つずまやか]] (tsuzumayaka)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 검
 
@@ -50,20 +41,6 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': geom
 ** '''[[McCune-Reischauer]]''': kŏm
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.171
-* Morohashi: 00823
-* Dae Jaweon: 0233.040
-* Hanyu Da Zidian: 10181.011
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5039
-** Decimal: 20537
 
 [[fr:倹]]
 [[ko:倹]]
