--- a/en/倻/倻.11080.wikitext
+++ b/en/倻/倻.11080.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人尸十中 (OSJL)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': phonetic used in Korean place names
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=|canj=人尸十中 (OSJL)}}
+# phonetic used in Korean place names
+====References====
+{{Han ref|kx=0112.071|hdz=10171.030|uh=503B|ud=20539}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,19 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[や]] (ya)|kun readings=[[や]] (ya)}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[や]] (ya)|kun=[[や]] (ya)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 야
 
@@ -46,17 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ya
 ** '''[[McCune-Reischauer]]''': ya
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0112.071
-* Hanyu Da Zidian: 10171.030
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 503B
-** Decimal: 20539
 
 [[fr:倻]]
