--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[値]]
+{{see|値}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+8
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 10|10]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2421<sub>6</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人十月一 (OJBM)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': [[price]]
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=08|sn=10|four=2421<sub>6</sub>|canj=人十月一 (OJBM)}}
+# [[price]]
+====References====
+{{Han ref|kx=0109.171|hdz=10171.080|uh=503C|ud=20540}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -28,19 +22,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': jik6
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ち]] (chi), [[ちょく]] (choku)|kun readings=[[ね]] (ne), [[あたい]] (atai), [[あう]] (au)}}
+===Kanji===
+{{ja-kanji|grade=|rs=人08}}
+====Readings====
+{{ja-readings|on=[[ち]] (chi), [[ちょく]] (choku)|kun=[[ね]] (ne), [[あたい]] (atai), [[あう]] (au)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 치
 
@@ -48,18 +41,6 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': chi
 ** '''[[McCune-Reischauer]]''': ch'i
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.171
-* Hanyu Da Zidian: 10171.080
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 503C
-** Decimal: 20540
 * '''Big5''':
 ** Hex: ADC8
 ** Decimal: 44488
