--- a/en/偀/偀.11086.wikitext
+++ b/en/偀/偀.11086.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2423<sub>5</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人廿中大 (OTLK)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2423<sub>5</sub>|canj=人廿中大 (OTLK)}}
+====References====
+{{Han ref|kx=0109.190|dkj=00827|hdz=10186.160|uh=5040|ud=20544|bh=D463|bd=54371}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,33 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ying1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[えい]] (ei)
-|kun readings=[[はなぶさ]] (hanabusa)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[えい]] (ei)|kun=[[はなぶさ]] (hanabusa)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0109.190
-* Morohashi: 00827
-* Hanyu Da Zidian: 10186.160
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5040
-** Decimal: 20544
-* '''Big5''':
-** Hex: D463
-** Decimal: 54371
 
 [[fr:偀]]
