--- a/en/偁/偁.11087.wikitext
+++ b/en/偁/偁.11087.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2224<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人月土月 (OBGB)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': state
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2224<sub>7</sub>|canj=人月土月 (OBGB)}}
+# state
+====References====
+{{Han ref|kx=0109.200|dkj=00828|dj=0233.090|hdz=10193.060|uh=5041|ud=20545|bh=D457|bd=54359}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ching1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[しょう]] (shō)
-|kun readings=[[あげる]] (ageru)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[しょう]] (shō)|kun=[[あげる]] (ageru)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 칭
 
@@ -48,22 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ching
 ** '''[[McCune-Reischauer]]''': ch'ing
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.200
-* Morohashi: 00828
-* Dae Jaweon: 0233.090
-* Hanyu Da Zidian: 10193.060
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5041
-** Decimal: 20545
-* '''Big5''':
-** Hex: D457
-** Decimal: 54359
 
 [[fr:偁]]
